--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
               <h3 class="text-xl font-bold text-white mb-2">Portfolio Website</h3>
               <p class="text-gray-400 mb-4 flex-grow">A personal portfolio website designed to showcase skills and projects (this one!).</p>
               <div class="mt-auto flex justify-between items-center pt-4">
-                <a href="https://github.com/your-username/portfolio-repo" target="_blank" rel="noopener noreferrer" class="flex items-center text-gray-300 hover:text-cyan-400">
+                <a href="https://github.com/SlushyMint/My-Portfolio-Website.git" target="_blank" rel="noopener noreferrer" class="flex items-center text-gray-300 hover:text-cyan-400">
                   <i data-feather="github" class="w-5 h-5 mr-2"></i>
                   Source
                 </a>
