--- a/index.html
+++ b/index.html
@@ -413,8 +413,8 @@
           <a href="https://www.linkedin.com/in/muhammad-shumin-80b411326/" target = "_blank" class="hover:text-cyan-400"
             ><i data-feather="linkedin"></i
           ></a>
-          <a href="#" class="hover:text-cyan-400"
-            ><i data-feather="twitter"></i
+          <a href="https://www.instagram.com/syuminsyumin/" target = "_blank" class="hover:text-cyan-400"
+            ><i data-feather="instagram"></i
           ></a>
         </div>
         <p>&copy; 2025 Muhammad Shumin. All Rights Reserved.</p>
