--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         >
         <a href="#skills" class="block py-2 px-4 text-sm nav-link">Skills</a>
         <a
-          href="assets/YourResume.pdf"
+          href="assets/CV For Magang.pdf"
           target="_blank"
           class="block py-2 px-4 text-sm nav-link"
           >Resume</a
