--- a/index.html
+++ b/index.html
@@ -160,12 +160,12 @@
                 Relevant Coursework
               </h3>
               <div class="flex flex-wrap gap-3 mt-4">
-                <span class="skill-badge">Data Structures & Algorithms</span>
-                <span class="skill-badge">Web Development</span>
+                <span class="skill-badge">Programming & Algorithms</span>
+                <span class="skill-badge">Introduction to Business and Management</span>
                 <span class="skill-badge">Database Systems</span>
-                <span class="skill-badge">Object-Oriented Programming</span>
-                <span class="skill-badge">Software Engineering</span>
-                <span class="skill-badge">Operating Systems</span>
+                <span class="skill-badge">Statistic</span>
+                <span class="skill-badge">Data Structure</span>
+                <span class="skill-badge">Visual Programming</span>
               </div>
             </div>
           </div>
