--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
           </div>
           <div class="md:w-2/3 text-lg text-gray-300 space-y-4">
             <p>
-              Hello! I'm Shumin, a university student with a deep passion for
+              Hello! I'm Shumin, a 20 year old university student with a deep passion for
               data and business analysis. I'm fascinated by the intersection of
               data and strategy, and I'm constantly exploring new ways to
               translate complex datasets into actionable business intelligence.
